fix overflow on chrome

--- a/assets/component-cart-drawer.css
+++ b/assets/component-cart-drawer.css
@@ -24,7 +24,7 @@
   border: 0.1rem solid rgba(var(--color-foreground), 0.2);
   border-right: 0;
   background-color: rgb(var(--color-background));
-  overflow-x: hidden;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   transform: translateX(100%);
